--- a/index.html
+++ b/index.html
@@ -21,8 +21,6 @@
 				<!-- Header -->
 					<header id="header" class="alt">
 						<span class="logo"><img src="images/Fix_logo.png" alt="" /></span>
-						<!-- <h1>FiKS</h1> -->
-						<p>Tech Repair<br /></p>
 						<a href="sms:+44-7429-555013" class="button primary">Message on +44 74 2955 5013</a>
 					</header>
 
@@ -114,14 +112,11 @@
 										<strong>1,024</strong> Nullam
 									</li> 
 								</ul>-->
-                                <p>&bull; Speed up for slow, aging laptops and desktops
-                                    &bull; Laptop battery replacements
-                                    &bull; Keyboards replacements
-                                    &bull; Display replacements
-                                    &bull; Upgrades for storage, RAM, CPU, Graphics card and WiFi module
-                                    &bull; Data removal from old computers and hard drives &bull;
+                                <p>We provide hardware and software level upgrades and repair of computers, phones, and tablets &bull;
+									We can upgrade your PC’s storage, RAM, graphics card, CPU, PSU, and motherboards &bull;
+									Windows and Linux installation, dual booting, Microsoft office installation, LibreOffice installation (free office).
                                     </p>
-									<p>&bull; And more...</p>
+									<p>&bull; Feel free to ask any questions about unlisted services and repairs.</p>
 								<footer class="major">
 										<!-- <ul class="actions">
 											<li><a href="generic.html" class="button">Learn More</a></li>
