--- a/index.html
+++ b/index.html
@@ -27,34 +27,17 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul>
-							<!--<li><a href="#intro" class="active">Introduction</a></li>
-							<li><a href="#first">First Section</a></li>-->
-							<li><a href="#second">What We Offer</a></li>
-							<li><a href="#cta">What Customers Think</a></li>
+							
+							<!--<li><a href="#first">First Section</a></li>-->
+							<li><a href="#intro" class="active">What We Offer</a></li>
+							<li><a href="#review">What Customers Think</a></li>
+							<li><a href="#about">About</a></li>
+							<!--<li><a href="#images">First Section</a></li> -->
 						</ul>
 					</nav>
 
 				<!-- Main -->
 					<div id="main">
-
-						<!-- Introduction
-							<section id="intro" class="main">
-								<div class="spotlight">
-									<div class="content">
-										<header class="major">
-											<h2>Computer Repair</h2>
-										</header>
-										<p>Sed lorem ipsum dolor sit amet nullam consequat feugiat consequat magna
-										adipiscing magna etiam amet veroeros. Lorem ipsum dolor tempus sit cursus.
-										Tempus nisl et nullam lorem ipsum dolor sit amet aliquam.</p>
-										<ul class="actions">
-											<li><a href="generic.html" class="button">Learn More</a></li>
-										</ul>
-									</div>
-									<span class="image"><img src="images/pic01.jpg" alt="" /></span>
-								</div>
-							</section> -->
-
 						<!-- First Section
 							<section id="first" class="main special">
 								<header class="major">
@@ -85,7 +68,7 @@
 							</section> -->
 
 						<!-- Second Section -->
-							<section id="second" class="main special">
+							<section id="intro" class="main special">
 								<header class="major">
 									<h2>What We Offer</h2>
 									<p>We repair computers, laptops, phones, and more...<br /></p>
@@ -117,6 +100,8 @@
 									Windows and Linux installation, dual booting, Microsoft office installation, LibreOffice installation (free office).
                                     </p>
 									<p>&bull; Feel free to ask any questions about unlisted services and repairs.</p>
+									<h3>NO FIX, NO FEE.</h3>
+
 								<footer class="major">
 										<!-- <ul class="actions">
 											<li><a href="generic.html" class="button">Learn More</a></li>
@@ -125,7 +110,7 @@
 							</section>
 
 						<!-- Get Started-->
-							<section id="cta" class="main special">
+							<section id="review" class="main special">
 								<header class="major">
 									<h2>What Customers Think</h2>
 									<script src="https://apps.elfsight.com/p/platform.js" defer></script>
@@ -133,9 +118,47 @@
 								</header>
 								<footer class="major">
 									<ul class="actions special">
-										<li><a href="https://search.google.com/local/writereview?placeid=ChIJpQs6RWEZdkgREm67mR5St3Y" class="button primary">WRITE A REVIEW</a></li>
+										<li><a href="https://search.google.com/local/writereview?placeid=ChIJpQs6RWEZdkgREm67mR5St3Y" class="button primary">Reviews on Google</a></li>
+										<li><a href="https://www.yelp.com/biz/fiks-london" class="button primary">Reviews on Yelp</a></li>
+										<li><a href="https://nextdoor.co.uk/pages/fiks-london-middlesex/recommend/" class="button primary">Reviews on NextDoor</a></li>
 									</ul>
 								</footer>
+							</section>
+
+						<!-- Images 
+							<section id="images" class="main special">
+								<h2>Owr Work place</h2>
+								<h3>Fit</h3>
+								<div class="box alt">
+									<div class="row gtr-uniform">
+										<div class="col-12"><span class="image fit"><img src="images/pic04.jpg" alt="" /></span></div>
+										<div class="col-4"><span class="image fit"><img src="images/pic01.jpg" alt="" /></span></div>
+										<div class="col-4"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div>
+										<div class="col-4"><span class="image fit"><img src="images/pic03.jpg" alt="" /></span></div>
+									</div>
+								</div>
+							</section>-->
+
+							<!-- About me -->
+							<section id="about" class="main">
+								<div class="spotlight">
+									<div class="content">
+										<header class="major">
+											<h2>About Me</h2>
+										</header>
+										<p>I started learning about electronics at the age of 7. 
+											Ever since I have been fixing phones, computers (software and/or hardware). 
+											I have had bad experiences with repair shops and getting my device returned broken in other ways. 
+											With the knowledge I learned over years and motivation to give people a better experience I decided to start FiKS. 
+											I want to make repair service a more pleasant experience.
+											</p>
+											<p>Saman.K</p>
+										<ul class="actions">
+											<li><a href="https://samank.me/" class="button">Learn More</a></li>
+										</ul>
+									</div>
+									<!--<span class="image"><img src="images/DSC03384.JPG" alt="" /></span> -->
+								</div>
 							</section>
 
 					</div>
