google link for reviews.

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 								</header>
 								<footer class="major">
 									<ul class="actions special">
-										<li><a href="https://search.google.com/local/writereview?placeid=ChIJpQs6RWEZdkgREm67mR5St3Y" class="button primary">Reviews on Google</a></li>
+										<li><a href="https://g.page/r/CRJuu5keUrd2EBA" class="button primary">Reviews on Google</a></li>
 										<li><a href="https://www.yelp.com/biz/fiks-london" class="button primary">Reviews on Yelp</a></li>
 										<li><a href="https://nextdoor.co.uk/pages/fiks-london-middlesex/recommend/" class="button primary">Reviews on NextDoor</a></li>
 									</ul>
