--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul>
-							
+
 							<!--<li><a href="#first">First Section</a></li>-->
 							<li><a href="#intro" class="active">What We Offer</a></li>
 							<li><a href="#review">What Customers Think</a></li>
@@ -93,7 +93,7 @@
 									<li class="style5">
 										<span class="icon fa-gem"></span>
 										<strong>1,024</strong> Nullam
-									</li> 
+									</li>
 								</ul>-->
                                 <p>We provide hardware and software level upgrades and repair of computers, phones, and tablets &bull;
 									We can upgrade your PC’s storage, RAM, graphics card, CPU, PSU, and motherboards &bull;
@@ -125,7 +125,7 @@
 								</footer>
 							</section>
 
-						<!-- Images 
+						<!-- Images
 							<section id="images" class="main special">
 								<h2>Owr Work place</h2>
 								<h3>Fit</h3>
@@ -146,10 +146,10 @@
 										<header class="major">
 											<h2>About Me</h2>
 										</header>
-										<p>I started learning about electronics at the age of 7. 
-											Ever since I have been fixing phones, computers (software and/or hardware). 
-											I have had bad experiences with repair shops and getting my device returned broken in other ways. 
-											With the knowledge I learned over years and motivation to give people a better experience I decided to start FiKS. 
+										<p>I started learning about electronics at the age of 7.
+											Ever since I have been fixing phones, computers (software and/or hardware).
+											I have had bad experiences with repair shops and getting my device returned broken in other ways.
+											With the knowledge I learned over years and motivation to give people a better experience I decided to start FiKS.
 											I want to make repair service a more pleasant experience.
 											</p>
 											<p>Saman.K</p>
@@ -168,10 +168,12 @@
 						<section>
 							<h2>Contact us</h2>
 							<dl class="alt">
-								<dt>Address:</dt>
+								<!--<dt>Address:</dt>
 								<dd>19 Balmoral Ave &bull; London, N11 3QA &bull; UK</dd>
 								<dt>Message:</dt>
-								<dd><a href="sms:+44-7429-555013">+44 74 2955 5013</a></dd>
+								<dd><a href="sms:+44-7429-555013">+44 74 2955 5013</a></dd>-->
+								<dt>Telegram:</dt>
+								<dd><a href="https://t.me/SamanK02">@SamanK02</a></dd>
 								<dt>Email:</dt>
 								<dd><a href="mailto:fiks.services@gmail.com">fiks.services@gmail.com</a></dd>
 							</dl>
@@ -187,7 +189,7 @@
 								<dd><a href="mailto:fiks.services@gmail.com">fiks.services@gmail.com</a></dd>
 							</dl> -->
 							 <ul class="icons">
-								<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2477.602384953867!2d-0.14812388422616843!3d51.61217367965248!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x76b7521e99bb6e12!2sFiKS%20tech%20repair!5e0!3m2!1sen!2suk!4v1623244986507!5m2!1sen!2suk" 
+								<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2477.602384953867!2d-0.14812388422616843!3d51.61217367965248!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x76b7521e99bb6e12!2sFiKS%20tech%20repair!5e0!3m2!1sen!2suk!4v1623244986507!5m2!1sen!2suk"
 								width="100%" height="200"  style="border: 10px;" allowfullscreen="" loading="lazy"></iframe>
 							<!--	<li><a href="#" class="icon brands fa-twitter alt"><span class="label">Twitter</span></a></li>
 								<li><a href="#" class="icon brands fa-facebook-f alt"><span class="label">Facebook</span></a></li>
