Degoogle page update

--- a/degoogle.html
+++ b/degoogle.html
@@ -21,8 +21,7 @@
 				<!-- Header -->
 					<header id="header">
 						<span class="logo"><img src="images/Fix_logo.png" alt="" /></span>
-						<h1>De-Google</h1>
-						<p>Privacy phones for all.</p>
+						<p>Time to escape from Mobile Surveillance!</p>
 					</header>
 
 				<!-- Main -->
@@ -31,23 +30,51 @@
 						<!-- Content -->
 							<section id="content" class="main">
 
+								<section id="first" class="main special">
+									<header class="major">
+										<h2>Benefits</h2>
+									</header>
+									<ul class="features">
+										<li>
+											<span class="icon solid major style1 fa-lock"></span>
+											<h3>Security</h3>
+											<p>Your data, your rules. You are in control of what your apps can do whenever you want.</p>
+										</li>
+										<li>
+											<span class="icon solid major style5 fa-map-marker"></span>
+											<h3>Tracking</h3>
+											<p>Your phone will be yours. You grant permission to any App on your phone and take the permission away anytime you want with no big tech between you and your phone.</p>
+										</li>
+										<li>
+											<span class="icon major style3 fa-eye"></span>
+											<h3>Privacy</h3>
+											<p>Your smartphone is harvesting your data all day long, capturing with great detail where you are, who you are, and what you’re doing 24/7.</p>
+										</li>
+									</ul>
+									<footer class="major">
+										<ul class="actions special">
+											<li><a href="https://grapheneos.org" class="button">GrapheneOS</a></li>
+											<li><a href="https://lineageos.org" class="button">Lineage OS</a></li>
+										</ul>
+									</footer>
+									<hr />
+								</section>
+
 								<!-- Why should you be concerned? -->
 									<section>
 										<h2>Why should you be concerned?</h2>
-										<p>We know Google and Apple have control over our personal data. Google uses whatever data they can get from us and our phones to use as their own to target advertisements towards our most venerable and sensitive part of us. Apple has the hardware to software control over your use of the device and data as they have recently said they are planning to automatically scan devices for CSAM and we just have to trust them that they will respect our no opt-out if there is one.</p>
-											<p><iframe id="odysee-iframe" width="560" height="315" src="https://odysee.com/$/embed/apple/8a51a5b8d961ba69dba14eaa8648971262ddd07c?r=GzUY3XmMttK8NVcmCFjsH92wL68VcLKu" allowfullscreen></iframe></p>
-											<p><iframe id="odysee-iframe" width="560" height="315" src="https://odysee.com/$/embed/de-googled-phone/37470734a0005707ba99fb9f0409c81e2fa71f88?r=GzUY3XmMttK8NVcmCFjsH92wL68VcLKu" allowfullscreen></iframe></p>
-											<p><iframe width="560" height="315" src="https://www.youtube.com/embed/VFns39RXPrU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+										<p>It's no secret that Google and Apple have control over our personal data. Google uses whatever data they can get from our phones to use as their own to target advertisements towards our most vulnerable and sensitive part of us. Apple has the hardware to software control over the devices they sell. Apple also has control over the user's data as they have recently said they are going to automatically scan our personal photos on the device for CSAM (Child Sexual Abuse Material) with a promise to keep scanning on the phone. Doesn't matter if you are on Apple or Android side your device is not secure from the big techs tentacles. The best option that is out there is to use an alternative operating system and move away from "free" services that sell your data to the highest bidder.</p>
+										<div class="col-12"><span class="image fit"><img src="images/pic04.jpg" alt="" /></span></div>
+										<div class="col-12"><iframe id="odysee-iframe" width="100%" height="315" src="https://odysee.com/$/embed/apple/8a51a5b8d961ba69dba14eaa8648971262ddd07c?r=GzUY3XmMttK8NVcmCFjsH92wL68VcLKu" allowfullscreen></iframe><a href="https://odysee.com/@RobBraxmanTech:6/apple:8a">iPhone Neural Hash - SHOCKING AI Tech</a></div>
+										<div class="col-12"><iframe id="odysee-iframe" width="100%" height="315" src="https://odysee.com/$/embed/de-googled-phone/37470734a0005707ba99fb9f0409c81e2fa71f88?r=GzUY3XmMttK8NVcmCFjsH92wL68VcLKu" allowfullscreen></iframe><a href="https://odysee.com/@NaomiBrockwell:4/de-googled-phone:3">How To DE-GOOGLE Your Phone!</a></div>
+										<div class="col-12"><iframe width="100%" height="315" src="https://www.youtube.com/embed/VFns39RXPrU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><a href="https://youtu.be/VFns39RXPrU">Edward Snowden: How Your Cell Phone Spies on You</a></div>
 
 										<hr />
 									</section>
 									<!-- ram -->
 										<section>
-											<h2>Defrent RAMs</h2>
-											<p>There is a number of RAMs out there. Two of them I offer are <a href="https://lineageos.org">Lineage OS</a> or <a href="https://grapheneos.org">GrapheneOS</a>.</p>
-											<p>I would recommend <a href="https://grapheneos.org">GrapheneOS</a> for the highest flexibility on security. <a href="https://grapheneos.org">GrapheneOS</a> is supported on a limited hardware which you can look at <a href="https://grapheneos.org/faq#supported-devices">here</a></p>
-											<p>I would recommend <a href="https://lineageos.org">Lineage OS</a> for the highest flexibility on hardware. <a href="https://lineageos.org">Lineage OS</a> has a wider hardware <a href="https://wiki.lineageos.org/devices/">supported</a>.</p>
-											<p>I would go with <a href="https://lineageos.org">Lineage OS</a> so I can choose a phone with micro SD card support.</p>
+											<h2>Different RAMs</h2>
+											<p>There is a number of RAMs out there. Two of them I offer are <a href="https://lineageos.org">Lineage OS</a> or <a href="https://grapheneos.org">GrapheneOS</a>. I would recommend GrapheneOS for more privacy and security focused option, and recommend Lineage OS give you wider <a href="https://wiki.lineageos.org/devices/">choice</a> over your hardware (GrapheneOS <a href="https://grapheneos.org/faq#supported-devices">hardware support</a>). I would go with Lineage OS so I can choose a phone with micro SD card support. You can choose a phone with a specific hardware feature you want, like headphone jack, dual sim, small size or any phone on the support lists.</p>
 											<hr />
 										</section>
 								<!-- Pixel 4a -->
