--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				<!-- Header -->
 					<header id="header" class="alt">
 						<span class="logo"><img src="images/Fix_logo.png" alt="" /></span>
-						<a href="sms:+44-7429-555013" class="button primary">Message on +44 74 2955 5013</a>
+						<!--<a href="sms:+44-7429-555013" class="button primary">Message on +44 74 2955 5013</a> -->
 					</header>
 
 				<!-- Nav -->
@@ -100,8 +100,9 @@
 									Windows and Linux installation, dual booting, Microsoft office installation, LibreOffice installation (free office).
                                     </p>
 									<p>&bull; Feel free to ask any questions about unlisted services and repairs.</p>
+									<p>&bull; Looking to escape from Mobile Surveillance from big tech?<p>
+									<a href="RAM" class="button primary small">Privacy Phones</a> <a href="https://t.me/SamanK02" class="button small">Contact me</a>
 									<h3>NO FIX, NO FEE.</h3>
-
 								<footer class="major">
 										<!-- <ul class="actions">
 											<li><a href="generic.html" class="button">Learn More</a></li>
@@ -189,9 +190,9 @@
 								<dd><a href="mailto:fiks.services@gmail.com">fiks.services@gmail.com</a></dd>
 							</dl> -->
 							 <ul class="icons">
-								<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2477.602384953867!2d-0.14812388422616843!3d51.61217367965248!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x76b7521e99bb6e12!2sFiKS%20tech%20repair!5e0!3m2!1sen!2suk!4v1623244986507!5m2!1sen!2suk"
+								<!--<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2477.602384953867!2d-0.14812388422616843!3d51.61217367965248!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x76b7521e99bb6e12!2sFiKS%20tech%20repair!5e0!3m2!1sen!2suk!4v1623244986507!5m2!1sen!2suk"
 								width="100%" height="200"  style="border: 10px;" allowfullscreen="" loading="lazy"></iframe>
-							<!--	<li><a href="#" class="icon brands fa-twitter alt"><span class="label">Twitter</span></a></li>
+								<li><a href="#" class="icon brands fa-twitter alt"><span class="label">Twitter</span></a></li>
 								<li><a href="#" class="icon brands fa-facebook-f alt"><span class="label">Facebook</span></a></li>
 								<li><a href="#" class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li>
 								<li><a href="#" class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
