--- a/ROM.html
+++ b/ROM.html
@@ -20,7 +20,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<span class="logo"><img src="images/Fix_logo.png" alt="" /></span>
+						<span class="logo"><a href="index"><img src="images/Fix_logo.png" alt="" /><a></span>
 						<p>Time to escape from Mobile Surveillance!</p>
 					</header>
 
@@ -31,7 +31,7 @@
 								<!--<li><a href="#first">First Section</a></li>-->
 								<li><a href="#Why?" class="active">Why?</a></li>
 								<li><a href="#Benefits">Benefits</a></li>
-								<li><a href="#RAMs">RAMs</a></li>
+								<li><a href="#ROMs">ROMs</a></li>
 								<li><a href="#Devices">Devices</a></li>
 							</ul>
 						</nav>
@@ -83,10 +83,10 @@
 										</footer>
 										<hr />
 									</section>
-									<!-- ram -->
-										<section id="RAMs">
-											<h2>Different RAMs</h2>
-											<p>There is a number of RAMs out there. Two of them I offer are <a href="https://lineageos.org">Lineage OS</a> or <a href="https://grapheneos.org">GrapheneOS</a>. I would recommend GrapheneOS for more privacy and security focused option, and recommend Lineage OS give you wider <a href="https://wiki.lineageos.org/devices/">choice</a> over your hardware (GrapheneOS <a href="https://grapheneos.org/faq#supported-devices">hardware support</a>). I would go with Lineage OS so I can choose a phone with micro SD card support. You can choose a phone with a specific hardware feature you want, like headphone jack, dual sim, small size or any phone on the support lists.</p>
+									<!-- rom -->
+										<section id="ROMs">
+											<h2>Different ROMs</h2>
+											<p>There is a number of ROMs out there. Two of them I offer are <a href="https://lineageos.org">Lineage OS</a> or <a href="https://grapheneos.org">GrapheneOS</a>. I would recommend GrapheneOS for more privacy and security focused option, and recommend Lineage OS give you wider <a href="https://wiki.lineageos.org/devices/">choice</a> over your hardware (GrapheneOS <a href="https://grapheneos.org/faq#supported-devices">hardware support</a>). I would go with Lineage OS so I can choose a phone with micro SD card support. You can choose a phone with a specific hardware feature you want, like headphone jack, dual sim, small size or any phone on the support lists.</p>
 											<hr />
 										</section>
 								<!-- Pixel 4a -->
