--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<span class="logo"><img src="images/Fix_logo.png" alt="" /></span>
+						<span class="logo"><img href="index" src="images/Fix_logo.png" alt="" /></span>
 						<!--<a href="sms:+44-7429-555013" class="button primary">Message on +44 74 2955 5013</a> -->
 					</header>
 
@@ -101,7 +101,7 @@
                                     </p>
 									<p>&bull; Feel free to ask any questions about unlisted services and repairs.</p>
 									<p>&bull; Looking to escape from Mobile Surveillance from big tech?<p>
-									<a href="RAM" class="button primary small">Privacy Phones</a> <a href="https://t.me/SamanK02" class="button small">Contact me</a>
+									<a href="ROM" class="button primary small">Privacy Phones</a> <a href="https://t.me/SamanK02" class="button small">Contact me</a>
 									<h3>NO FIX, NO FEE.</h3>
 								<footer class="major">
 										<!-- <ul class="actions">
